--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
